--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -23,39 +23,39 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A4P-FY-c3G">
-                                            <rect key="frame" x="8" y="8" width="152" height="115"/>
+                                            <rect key="frame" x="3" y="8" width="152" height="115"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="152" id="Bxq-yE-Jc1"/>
+                                                <constraint firstAttribute="width" constant="152" id="dZB-lR-hld"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Butt Stuff" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IH2-qg-oYs">
-                                            <rect key="frame" x="168" y="40" width="424" height="83"/>
+                                            <rect key="frame" x="163" y="40" width="424" height="83"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <color key="textColor" red="1" green="0.98039215690000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rank" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0n-ne-rmF">
-                                            <rect key="frame" x="168" y="15" width="109" height="24"/>
+                                            <rect key="frame" x="163" y="8" width="109" height="29"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="24" id="31A-Mh-4Fv"/>
-                                                <constraint firstAttribute="width" constant="109" id="dBW-rJ-Gsy"/>
+                                                <constraint firstAttribute="height" constant="29" id="M73-1z-Zp4"/>
+                                                <constraint firstAttribute="width" constant="109" id="oSQ-P7-3OW"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <color key="textColor" red="1" green="0.98039215690000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="bottom" secondItem="3TK-VM-fXJ" secondAttribute="bottomMargin" id="256-0u-BWu"/>
-                                        <constraint firstItem="d0n-ne-rmF" firstAttribute="top" secondItem="3TK-VM-fXJ" secondAttribute="topMargin" constant="7" id="NXU-ny-U4w"/>
-                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="bottom" secondItem="IH2-qg-oYs" secondAttribute="bottom" id="QXy-eQ-k5e"/>
-                                        <constraint firstItem="d0n-ne-rmF" firstAttribute="leading" secondItem="IH2-qg-oYs" secondAttribute="leading" id="cyq-rk-Hw5"/>
-                                        <constraint firstItem="IH2-qg-oYs" firstAttribute="trailing" secondItem="3TK-VM-fXJ" secondAttribute="trailingMargin" id="erk-FH-Wi3"/>
-                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="leading" secondItem="3TK-VM-fXJ" secondAttribute="leadingMargin" id="fR4-0X-qZO"/>
-                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="top" secondItem="3TK-VM-fXJ" secondAttribute="topMargin" id="gf3-6X-A1a"/>
-                                        <constraint firstItem="IH2-qg-oYs" firstAttribute="top" secondItem="d0n-ne-rmF" secondAttribute="bottom" constant="1" id="kj5-a0-iYb"/>
-                                        <constraint firstItem="d0n-ne-rmF" firstAttribute="leading" secondItem="A4P-FY-c3G" secondAttribute="trailing" constant="8" symbolic="YES" id="ov2-oD-dea"/>
+                                        <constraint firstItem="IH2-qg-oYs" firstAttribute="top" secondItem="d0n-ne-rmF" secondAttribute="bottom" constant="3" id="7Yf-kQ-wt9"/>
+                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="bottom" secondItem="IH2-qg-oYs" secondAttribute="bottom" id="GVO-QE-ZiC"/>
+                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="top" secondItem="3TK-VM-fXJ" secondAttribute="topMargin" id="JCQ-Da-iZX"/>
+                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="bottom" secondItem="3TK-VM-fXJ" secondAttribute="bottomMargin" id="U0i-kP-H5h"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="IH2-qg-oYs" secondAttribute="trailing" constant="5" id="UxF-P4-LCh"/>
+                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="top" secondItem="d0n-ne-rmF" secondAttribute="top" id="mYy-dq-JNg"/>
+                                        <constraint firstItem="d0n-ne-rmF" firstAttribute="leading" secondItem="IH2-qg-oYs" secondAttribute="leading" id="nEm-Lx-yOf"/>
+                                        <constraint firstItem="A4P-FY-c3G" firstAttribute="leading" secondItem="3TK-VM-fXJ" secondAttribute="leadingMargin" constant="-5" id="prI-YW-0pm"/>
+                                        <constraint firstItem="d0n-ne-rmF" firstAttribute="leading" secondItem="A4P-FY-c3G" secondAttribute="trailing" constant="8" symbolic="YES" id="qC0-tV-lm7"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
